fix carousel view height on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,7 +23,7 @@
 
   .carousel-doodle img {
     max-width: 100%;
-    height: auto;
+    height: 70vh;
     margin: auto;
   }
 
